# sample-agentic-retail-dynamic-pricing-demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  THIRD-PARTY-LICENSES  cdk.json  deploy.sh  pyproject.toml  requirements.txt
backend/: __init__.py
cdk/: app.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  KNOWN_ISSUES.md  QUICK_START.md  README.md  agent_testing_guide.md
scripts/: __init__.py  create_agentcore_role.py  deploy_agentcore.py  deploy_agentcore.sh  seed_demo_cycles.py  seed_products.py  select_model.py  setup_gateway.py  setup_memory.py  switch_model.sh  sync_frontend_config.py  verify_deployment.py
shared/: __init__.py  approval_routing.py  guardrails.py  model_config.py  risk_classification.py  scenario_ranking.py  sigv4_client.py  variance_detection.py
tests/: conftest.py  test_approval_routing.py  test_cdk_deployment.py  test_cdk_stack.py  test_competitor_api_handler.py  test_cost_finance_handler.py  test_e2e_escalation_timeout.py  test_e2e_pricing_cycle.py  test_erp_pos_handler.py  test_guardrails.py  test_market_signals_handler.py  test_mcp_integration.py  test_memory.py  test_observability.py  test_persistence.py  test_pricing_scenario.py  test_prop_approval_routing.py  test_prop_confidence_and_count.py  test_prop_guardrails.py  test_prop_mcp_servers.py  test_prop_risk_classification.py  test_prop_scenario_ranking.py  test_prop_serialization.py  test_prop_strategy_synthesis.py  test_prop_variance_detection.py  test_resilience.py  test_risk_classification.py  test_scenario_ranking.py  test_sigv4_client.py  (+1 more)
(+115 files in other folders)
